GraphLangParser.py
# Generated from GraphLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GraphLangParser ( Parser ):

    grammarFileName = "GraphLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'graph'", "'('", "')'", "','", 
                     "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WS", "INT" ]

    RULE_prog = 0
    RULE_defGraph = 1
    RULE_nodeList = 2
    RULE_node = 3
    RULE_conn = 4
    RULE_weight = 5

    ruleNames =  [ "prog", "defGraph", "nodeList", "node", "conn", "weight" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    WS=10
    INT=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defGraph(self):
            return self.getTypedRuleContext(GraphLangParser.DefGraphContext,0)


        def EOF(self):
            return self.getToken(GraphLangParser.EOF, 0)

        def getRuleIndex(self):
            return GraphLangParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = GraphLangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.defGraph()
            self.state = 13
            self.match(GraphLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefGraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeList(self):
            return self.getTypedRuleContext(GraphLangParser.NodeListContext,0)


        def getRuleIndex(self):
            return GraphLangParser.RULE_defGraph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefGraph" ):
                listener.enterDefGraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefGraph" ):
                listener.exitDefGraph(self)




    def defGraph(self):

        localctx = GraphLangParser.DefGraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_defGraph)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15
            self.match(GraphLangParser.T__0)
            self.state = 16
            self.match(GraphLangParser.T__1)
            self.state = 17
            self.match(GraphLangParser.T__2)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 18
                self.nodeList()


            self.state = 21
            self.match(GraphLangParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphLangParser.NodeContext)
            else:
                return self.getTypedRuleContext(GraphLangParser.NodeContext,i)


        def getRuleIndex(self):
            return GraphLangParser.RULE_nodeList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeList" ):
                listener.enterNodeList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeList" ):
                listener.exitNodeList(self)




    def nodeList(self):

        localctx = GraphLangParser.NodeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nodeList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.node()
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 24
                self.match(GraphLangParser.T__4)
                self.state = 25
                self.node()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(GraphLangParser.INT, 0)

        def conn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphLangParser.ConnContext)
            else:
                return self.getTypedRuleContext(GraphLangParser.ConnContext,i)


        def getRuleIndex(self):
            return GraphLangParser.RULE_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode" ):
                listener.enterNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode" ):
                listener.exitNode(self)




    def node(self):

        localctx = GraphLangParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_node)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(GraphLangParser.INT)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 32
                self.conn()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(GraphLangParser.INT, 0)

        def weight(self):
            return self.getTypedRuleContext(GraphLangParser.WeightContext,0)


        def getRuleIndex(self):
            return GraphLangParser.RULE_conn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConn" ):
                listener.enterConn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConn" ):
                listener.exitConn(self)




    def conn(self):

        localctx = GraphLangParser.ConnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_conn)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(GraphLangParser.T__5)
            self.state = 39
            self.match(GraphLangParser.INT)
            self.state = 40
            self.match(GraphLangParser.T__6)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 41
                self.weight()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WeightContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(GraphLangParser.INT, 0)

        def getRuleIndex(self):
            return GraphLangParser.RULE_weight

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeight" ):
                listener.enterWeight(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeight" ):
                listener.exitWeight(self)




    def weight(self):

        localctx = GraphLangParser.WeightContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_weight)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(GraphLangParser.T__7)
            self.state = 45
            self.match(GraphLangParser.INT)
            self.state = 46
            self.match(GraphLangParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





